fix overflow of project caused by new chrome release

--- a/css/caret.css
+++ b/css/caret.css
@@ -35,6 +35,7 @@ a[target] {
   flex-grow: 1;
   align-items: stretch;
   align-content: stretch;
+  min-height: 0;
 }
 .editing {
   display: flex;
